--- a/app/src/main/res/menu/menu_profile_fragment.xml
+++ b/app/src/main/res/menu/menu_profile_fragment.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/action_sync"
-        android:icon="@drawable/ic_call"
-        android:title="@string/action_sync"
-        app:showAsAction="always"/>
+    <item android:id="@+id/action_exit_questionnaire_no_save"
+        android:title="@string/action_exit_questionnaire_no_save"
+        app:showAsAction="never"/>
 </menu>
