--- a/app/src/main/res/layout/activity_begin.xml
+++ b/app/src/main/res/layout/activity_begin.xml
@@ -66,6 +66,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/medium_text"
                         android:text="For each of the following categories, what is the name of the WhatsApp group you associate with it?"/>
                 </RelativeLayout>
                 <LinearLayout
@@ -76,6 +77,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/small_text"
                         android:text="Immediate family"/>
                     <RelativeLayout
                         android:layout_width="wrap_content"
@@ -104,6 +106,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/small_text"
                         android:text="Close friends"/>
                     <RelativeLayout
                         android:layout_width="wrap_content"
@@ -132,6 +135,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/small_text"
                         android:text="Acquaintances"/>
                     <RelativeLayout
                         android:layout_width="wrap_content"
@@ -160,6 +164,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/small_text"
                         android:text="Everyone"/>
                     <RelativeLayout
                         android:layout_width="wrap_content"
