--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,7 +5,9 @@
 
     <!--Text Size-->
 
-    <dimen name="large_text">16sp</dimen>
-    <dimen name="medium_text">14sp</dimen>
+    <dimen name="large_text">32sp</dimen>
+    <dimen name="medium_text">20sp</dimen>
+    <dimen name="small_text">18sp</dimen>
+    <dimen name="summary_tab">5dp</dimen>
 
 </resources>
